# resource-allocation-sim

./: README.md  pyproject.toml  requirements.txt  setup.sh
reports/: README.md
reports/analysis/: README.md  agent_study.md
reports/documentation/: README.md
reports/experiments/: README.md  capacity_ratio_study.md  initial_conditions_study.md  sequential_convergence_study.md  weight_parameter_study.md
resource_allocation_sim/: README.md  __init__.py  cli.py
resource_allocation_sim/configs/: comprehensive_study.yaml  quick_study.yaml
resource_allocation_sim/core/: __init__.py  agent.py  environment.py  simulation.py
resource_allocation_sim/evaluation/: __init__.py  agent_analysis.py  metrics.py  system_analysis.py
resource_allocation_sim/experiments/: README.md  __init__.py  base_experiment.py  capacity_analysis.py  capacity_ratio_study.py  comprehensive_study.py  grid_search.py  initial_conditions_study.py  parameter_sweep.py  sequential_convergence_study.py  weight_parameter_study.py
resource_allocation_sim/scripts/: __init__.py  analyse_results.py  analyze_results.py  read_results.py  run_experiment.py
resource_allocation_sim/tutorials/: 01_weight_parameter_tutorial.ipynb  02_sequential_convergence_tutorial.ipynb  03_initial_conditions_tutorial.ipynb  04_capacity_ratio_tutorial.ipynb  README.md  README_capacity_ratio.md  README_initial_conditions.md  README_sequential_convergence.md  README_weight_parameter.md  capacity_ratio_tutorial.py  initial_conditions_tutorial.py  sequential_convergence_tutorial.py  tutorial_introduction.py  weight_parameter_tutorial.py
resource_allocation_sim/utils/: __init__.py  config.py  helpers.py  io.py  reporting.py
resource_allocation_sim/visualisation/: __init__.py  network.py  plots.py  ternary.py
resource_allocation_sim/visualization/: __init__.py  network.py  plots.py  ternary.py
tests/: __init__.py  test_core.py
