[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-allocation-sim"
version = "1.0.0"
description = "A comprehensive framework for simulating resource allocation with multi-agent learning"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["simulation", "multi-agent", "resource-allocation", "optimization"]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
ternary = [
    "mpltern>=1.0.0",
]
network = [
    "networkx>=2.6",
]
full = [
    "mpltern>=1.0.0",
    "networkx>=2.6",
    "plotly>=5.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.950",
    "pre-commit>=2.15",
    "flake8>=4.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]

[project.urls]
Homepage = "https://github.com/yourusername/resource-allocation-sim"
Documentation = "https://resource-allocation-sim.readthedocs.io/"
Repository = "https://github.com/yourusername/resource-allocation-sim.git"
"Bug Tracker" = "https://github.com/yourusername/resource-allocation-sim/issues"

[project.scripts]
resource-sim = "resource_allocation_sim.cli:cli"
resource-allocation-sim = "resource_allocation_sim.cli:cli"
ras = "resource_allocation_sim.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
resource_allocation_sim = ["configs/*.yaml", "configs/*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=resource_allocation_sim" 